RESOLVED FIXED294269
Korean counter styles aren't aligned with manual Korean numbering in lists.
https://bugs.webkit.org/show_bug.cgi?id=294269
Summary Korean counter styles aren't aligned with manual Korean numbering in lists.
Ian Gower
Reported 2025-06-10 09:53:11 PDT
Created attachment 475523 [details] Isolated test case demonstrating the alignment error for the Korean counter-styles. When displaying a list using any Korean counter style, the alignment differs from a list that manually labels items with the same Korean numbers. Specifically, lists with a Korean counter style show no extra spacing between entries. In contrast, lists without a counter style—but with the same Korean text inserted manually—introduce extra spacing between items. This discrepancy is evident in the attached test case. I discovered this issue while expanding the range for Chinese, Japanese, and Korean counter styles. The spacing inconsistency is specifically affecting the Korean styles and is currently preventing those test cases from passing.( https://github.com/WebKit/WebKit/pull/46446 )
Attachments
Isolated test case demonstrating the alignment error for the Korean counter-styles. (735 bytes, text/html)
2025-06-10 09:53 PDT, Ian Gower
no flags
Test reduction (366 bytes, text/html)
2025-06-10 10:58 PDT, alan
no flags
horizontal spacing testcase (irrelevant) (492 bytes, text/html)
2025-06-10 13:55 PDT, fantasai
no flags
weird testcase variant (789 bytes, text/html)
2025-06-10 14:20 PDT, fantasai
no flags
Fixed -screenshot (127.95 KB, image/png)
2025-06-10 19:56 PDT, alan
no flags
Patch (11.99 KB, patch)
2025-06-11 15:38 PDT, alan
no flags
Patch (12.31 KB, patch)
2025-06-11 17:42 PDT, alan
no flags
Patch (12.11 KB, patch)
2025-06-11 17:44 PDT, alan
no flags
Patch (12.75 KB, patch)
2025-06-11 20:12 PDT, alan
no flags
Patch (12.82 KB, patch)
2025-06-12 07:24 PDT, alan
no flags
[fast-cq]Patch (14.41 KB, patch)
2025-06-12 20:09 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2025-06-10 09:53:24 PDT
alan
Comment 2 2025-06-10 10:58:45 PDT
Created attachment 475525 [details] Test reduction
fantasai
Comment 3 2025-06-10 13:55:07 PDT
Created attachment 475528 [details] horizontal spacing testcase (irrelevant)
fantasai
Comment 4 2025-06-10 13:56:53 PDT
Comment on attachment 475528 [details] horizontal spacing testcase (irrelevant) Nm, I was looking at the wrong axis. :)
fantasai
Comment 5 2025-06-10 14:04:35 PDT
Alright, what's happening here is that the ::marker text is not contributing to the line height, but the <bdi> element (or its contents) are. The workaround for this would be to apply line-height: 1;, but, it's an interesting question of why we have this interference and e.g. Firefox does not.
fantasai
Comment 6 2025-06-10 14:20:54 PDT
Created attachment 475529 [details] weird testcase variant It seems like we are doing weird things with line-height here?
alan
Comment 7 2025-06-10 19:56:55 PDT
Created attachment 475531 [details] Fixed -screenshot All test cases are fixed (will upload the patch soon) but while the original test case was about fallback fonts, the "weird testcase variant" is a very different issue (list markers consult their parent list items for their baseline) so I am going to file a new bugzilla for that.
alan
Comment 8 2025-06-11 15:38:05 PDT
alan
Comment 9 2025-06-11 17:42:39 PDT
alan
Comment 10 2025-06-11 17:44:08 PDT
alan
Comment 11 2025-06-11 20:12:08 PDT
Antti Koivisto
Comment 12 2025-06-11 23:21:26 PDT
Comment on attachment 475544 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=475544&action=review > Source/WebCore/layout/integration/LayoutIntegrationBoxGeometryUpdater.cpp:497 > + const_cast<Layout::ElementBox&>(layoutBox).setListMarkerLayoutBounds(renderListMarker->layoutBounds()); :sad:
alan
Comment 13 2025-06-12 07:24:37 PDT
alan
Comment 14 2025-06-12 20:09:16 PDT
Created attachment 475564 [details] [fast-cq]Patch
EWS
Comment 15 2025-06-13 11:48:34 PDT
Committed 296203@main (78c26be44142): <https://commits.webkit.org/296203@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 475564 [details].
Note You need to log in before you can comment on or make changes to this bug.