Korean counter styles aren't aligned with manual Korean numbering in lists. https://bugs.webkit.org/show_bug.cgi?id=294269 <rdar://problem/152969810>

Reviewed by Antti Koivisto.

This is a workaround for webkit.org/b/294342.
List marker content should be visible to inline layout (line box building)
in order to properly set the line box's vertical attributes.
Either we let IFC handle marker layout which requires a completely new structure to represent markers (but would allow us to delete RenderListMarker) or
provide a way for IFC to collect bounds information. This patch implements the latter.

* LayoutTests/fast/inline/list-marker-with-streching-line-box-expected.html: Added.
* LayoutTests/fast/inline/list-marker-with-streching-line-box.html: Added.
* LayoutTests/fast/inline/list-marker-with-streching-line-box2-expected.html: Added.
* LayoutTests/fast/inline/list-marker-with-streching-line-box2.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::setVerticalPropertiesForInlineLevelBox const):
* Source/WebCore/layout/integration/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::BoxGeometryUpdater::updateBoxGeometryAfterIntegrationLayout):
* Source/WebCore/layout/layouttree/LayoutElementBox.h:
(WebCore::Layout::ElementBox::setListMarkerLayoutBounds):
(WebCore::Layout::ElementBox::layoutBoundsForListMarker const):
* Source/WebCore/rendering/RenderListMarker.cpp:
(WebCore::RenderListMarker::layout):
(WebCore::RenderListMarker::layoutBoundForTextContent const):
* Source/WebCore/rendering/RenderListMarker.h:

Canonical link: https://commits.webkit.org/296203@main